[project]
name = "accela"
version = "0.5.0"
description = "Accela SDK"
readme = "README.md"
authors = [
    { name = "Adam Walsh", email = "adam@walsh.me" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
build = [
    "uv-build>=0.8.3",
]
